# ventilation-simulator

./: CONTRIBUTING.rst  README.md  README.rst  setup.cfg
bundles/desktop/: README.md  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
examples/jupyter/: show.ipynb
simulation/0/: U  epsilon  k  nut  p
simulation/0/include/: ABLConditions  initialConditions
simulation/system/: blockMeshDict  controlDict  decomposeParDict.orig  snappyHexMeshDict  surfaceFeaturesDict
tests/: test_import.py
ventilation_simulator/: __init__.py
ventilation_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ventilation_simulator/app/: core.py
