[metadata]
name = ventilation-simulator
version = 1.0.0
description = A Trame application that performs natural and mechanical ventilation simulation using OpenFOAM
long_description = file: README.rst
long_description_content_type = text/x-rst
author = jipenaflor
license = Other
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    # vtk
    # pandas
    # numpy
    # altair
    # mpld3
    # plotly
    # pydeck

[options.entry_points]
console_scripts =
    ventilation-simulator = ventilation_simulator.app:main
jupyter_serverproxy_servers =
    ventilation-simulator = ventilation_simulator.app.jupyter:jupyter_proxy_info
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
